# pale-blue-dot-challenge

./: LICENSE  README.md  landsat_data_processor.py  landsat_images_data.json  pyproject.toml  settings.py
dataset/: landsat_images_data.json  landsat_images_metadata.json  landsat_images_report.txt  landsat_images_tags.json  temperature_roi_boundaries.txt
lab/: demo.ipynb  main_process.ipynb
shapefile/: Demo.dbf
shapefile/demo/: Demo_Rectangle_Shapefile_ROI.shp  Demo_Rectangle_Shapefile_ROI.shx
src/: commands.py  frame_image_processor.py  frame_video_processor.py  handlers.py  image_processor.py  landsat_data_processor.py  main.py  settings.py  utils.py
