[tool.poetry]
name = "pale-blue-dot-challenge"
version = "0.1.0"
description = ""
authors = ["cristianrubioa <cristianrubioa@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
oibur = "src.main:app"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
autoflake = "^2.2.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
rasterio = "^1.3.9"
geopandas = "^0.14.2"
gdal = "3.4.1"
matplotlib = "^3.8.2"
typer = "^0.9.0"
wheel = "^0.42.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
pillow = "^10.2.0"
scipy = "^1.12.0"
opencv-python = "^4.9.0.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
simplification = ["simplification"]

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^23.11.0"
pep8 = "^1.7.1"
pytest = "^7.4.3"
isort = "^5.12.0"
ruff = "^0.1.7"

[tool.isort]
force_single_line = true

[tool.ruff]
target-version = "py312"
line-length = 123
ignore = ["RUF001", "RUF012", "PLC1901", "COM812"]
select = [
  "E",
  "F",
  "W",
  "C4",
  "RUF",
  "UP",
  "B",
  "EM",
  "RET",
  "FLY",
  "SIM",
  "PERF",
  "ICN",
  "YTT",
  "ASYNC",
  "TID",
  "Q",
  "PYI",
  "FA",
  "T10",
  "PLC",
  "PLE",
  "ISC",
  "G",
  "INP",
  "PIE",
  "Q",
  "RSE",
  "TCH",
  "INT",
  "COM",
  "ICN",
  "SLOT",
  "ASYNC",
  "AIR",
  "YTT",
]